=== 3.26.0 (2011-08-01)

* Fix bug in default connection pool if a disconnect error is raised and the disconnection_proc also raises an error (jeremyevans)

* Disallow eager loading via eager of many_*_many associations with :eager_graph option (jeremyevans)

* Major speedup in dataset creation (jeremyevans)

* Replace internal implementation of eager_graph with much faster version (jeremyevans)

* Don't treat strings with leading zeros as octal format in the default typecasting (jeremyevans)

* Fix literalization of Date, Time, and DateTime values on Microsoft Access (jeremyevans)

* Fix handling of nil values with the pure-Java version of nokogiri in the xml_serializer plugin (jeremyevans)

* Make identity_map plugin work with standard eager loading of many_to_many and many_through_many associations (jeremyevans)

* Make create_table! only attempt to drop the table if it already exists (jeremyevans)

* Remove custom table_exists? implementations in the oracle and postgres adapters (jeremyevans)

* Handle another type of disconnection in the postgres adapter (jeremyevans)

* Handle disconnections in the ado adapter and do postgres subadapter (jeremyevans)

* Recognize disconnections when issuing BEGIN/ROLLBACK/COMMIT statements (jeremyevans) (#368)

=== 3.25.0 (2011-07-01)

* Work with tiny_tds-0.4.5 in the tinytds adapter, older versions are no longer supported (jeremyevans)

* Make association_pks plugin typecast provided values to integer if the primary key column type is integer (jeremyevans)
 
* Model.set_dataset now accepts Identifier, QualifiedIdentifier, and AliasedExpression arguments (jeremyevans)

* Fix handling of nil values in bound variables and prepared statement and stored procedure arguments in the jdbc adapter (jeremyevans, wei)

* Allow treating Datasets as Expressions, e.g. DB[:table1].select(:column1) > DB[:table2].select(:column2) (jeremyevans)

* No longer use CASCADE by default when dropping tables on PostgreSQL (jeremyevans)
